plugins {
    id 'java'
}

group = 'com.kodilla'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

repositories {
    mavenCentral()
}

dependencies {
}

test {
    useJUnitPlatform()
}
